# blockchain-hack-warsaw-2026

./: .gitignore  README.md
.aspire/: settings.json
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/config/: development.yaml  test.yaml
backend/migration/src/: lib.rs  m20260321_143849_strategies.rs  m20260321_160104_symbols.rs  m20260321_170000_chat_messages.rs  m20260322_000001_strategy_engine_fields.rs  m20260322_000002_strategy_v2_fields.rs
backend/src/: app.rs  lib.rs
backend/src/controllers/: chat.rs  mod.rs  notification.rs  strategies.rs
backend/src/models/: mod.rs  sea_orm_active_enums.rs  strategy.rs  symbol.rs
backend/src/models/_entities/: chat_message.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  strategy.rs  symbol.rs
backend/src/services/: condition.rs  drift.rs  llm.rs  mcp.rs  mod.rs  strategy_engine.rs
backend/tests/: mod.rs
backend/tests/requests/: mod.rs
backend/tests/services/: mod.rs
deploy/: apphost.cs  apphost.run.json
deploy/aspire-output/: docker-compose.yaml
frontend/: .dockerignore  API_CONTRACT.md  DEVOPS_PRODUCTION_DEPLOYMENT.md  Dockerfile  FRONTEND_HANDOFF.md  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: page.module.css  page.tsx
frontend/app/components/: Chat.jsx  Chat.module.css
frontend/lib/: store.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatPanel.tsx  GlobalChatInput.tsx  NotificationCenter.tsx  PortfolioPanel.tsx  Topbar.tsx  TradingPanel.tsx
frontend/src/components/ui/: Badge.tsx  (+3 more)
frontend/src/context/: TradingDashboardContext.tsx
frontend/src/hooks/: useTradingDashboard.ts
frontend/src/services/: tradingData.ts  tradingGateway.ts  tradingService.ts
frontend/src/utils/: constants.ts  types.ts
scripts/: keygen.sh
