[workspace]

[package]
name = "backend"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "backend-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16" }

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = { version = "1.11" }
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4"] }
rmcp = { version = "0.16", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1.0"
rust_decimal = "1"
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
drift-rs = { git = "https://github.com/drift-labs/drift-rs", tag = "v1.0.0-alpha.16", optional = true }
dotenvy = "0.15.7"
futures = "0.3.32"
tokio-stream = "0.1.18"

[features]
default = []
drift = ["dep:drift-rs"]

[[bin]]
name = "backend-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
